[package]
name = "rsune"
version = "0.1.0"
authors = ["Eqls"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
tokio = { version = "1.35.0", features = ["full"] }
futures = "0.3.29"
